--- a/requirements_linux_gpu.txt
+++ b/requirements_linux_gpu.txt
@@ -1,10 +1,10 @@
 numpy==1.24.2
-opencv-python-headless==4.2.0.34
+opencv-python-headless
 PyQt5==5.15.9
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.11.1
 PyQt5-stubs==5.15.6.0
-qt-material==2.14
+qt-material==2.14c
 yolov5==7.0.11
 torch==2.1.0
 torchaudio==2.1.0
